# xiaolei-agent

./: '.game-grid'  'game-board'  .coverage  .env  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .sandbox_view.py  00.md  AGENTS.md  AGENT_AUTONOMY_IMPLEMENTATION.md  ARCH.md  BACKEND_ALIGNMENT_REPORT.md  CHANGELOG_SUMMARY.md  CLAUDE.md  CLEANUP_FINAL_REPORT.md  COMPLETE_TEST_REPORT.md  Dockerfile  FEATURES.md  FLOW_ARCHITECTURE_DIAGRAM.md  GITHUB_CLEANUP_REPORT.md  GoConcurrencyModelDetails.md  HETEROGENEOUS_GRAPH.md  LICENSE  MCP_AGENT_IMPLEMENTATION_SUMMARY.md  MCP_AGENT_USER_GUIDE.md  MCP功能详解.md  MIGRATION_SUMMARY.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_PROGRESS.md  OPTIMIZATION_ROADMAP.md  PROJECT_ISSUES_REPORT.md  QUICK_START.md  README.md  SKILL_SYSTEM_SUMMARY.md  SOLUTION_PLAN.md  SPLIT_REPOS_GUIDE.md  TASKS_COMPLETE.md  TEST_COVERAGE_ANALYSIS.md  (+120 more)
.claude/: .gitignore
.memsearch/: 2026-06-09.md
.obsidian/: workspace.json
.playwright-mcp/: page-2026-06-08T03-29-41-714Z.yml  page-2026-06-08T04-51-41-161Z.yml  page-2026-06-08T04-53-13-337Z.yml  page-2026-06-08T04-59-44-492Z.yml  page-2026-06-08T05-01-33-049Z.yml  page-2026-06-09T09-55-37-546Z.yml  page-2026-06-09T09-55-47-871Z.yml
api/: monitor.py  pages.py  route_manager.py  schedule.py  v1.py  workflow.py
cli/: __init__.py  agent_tools.py  analyze.py  animated_spinner.py  ascii_art.py  autocomplete.py  automate.py  base.py  colors.py  command_model.py  command_parser.py  command_registry.py  config_tools.py  demo.py  enhanced_cli.py  fun_tools.py  games.py  logging_system.py  mcp_handler.py  (+19 more)
(+905 files in other folders)
