[project]
name = "xiaolongxia-agent"
version = "3.4.0"
requires-python = ">=3.13"
description = "小雷版小龙虾 AI Agent"
license = { text = "MIT" }

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["core", "skills", "tools"]
skip = [".venv", "__pycache__", "build", "dist"]
